--- a/notification_email_template.html
+++ b/notification_email_template.html
@@ -150,16 +150,16 @@
             valign="top"
             bgcolor="">
             <div>
-<div style="font-size: 14px;">Your SES domain&nbsp;received an email. We categorized this email as:&nbsp;{content_type}, but to confirm, you can follow the link below to view the message file in S3.</div>
+<div style="font-size: 14px;">Your SES domain received an email. We categorized this email as: {content_type}, but to confirm, you can follow the link below to view the message file in S3.</div>
 
 <div style="font-size: 14px;">&nbsp;</div>
 
 <div style="font-size: 14px;">
-<div style="font-size: 14px;">Sender and/or message:&nbsp;{notification_message}</div>
+<div style="font-size: 14px;">Sender and/or message {notification_message}</div>
 
 <div style="font-size: 14px;">&nbsp;</div>
 
-<div style="font-size: 14px;"><span style="color: rgb(0, 0, 0); font-family: arial; font-size: 14px; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400;">Link to message file: {link_to_file}&nbsp;</span></div>
+<div style="font-size: 14px;"><span style="color: rgb(0, 0, 0); font-family: arial; font-size: 14px; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400;">Link to message file: {link_to_file}</span></div>
 </div>
 </div>
 
