--- a/notification_email_template.html
+++ b/notification_email_template.html
@@ -137,29 +137,23 @@
             height="100%"
             valign="top"
             bgcolor="">
-            <h3>New email received to SES domain</h3>
-
-        </td>
-      </tr>
-    </table>
-  
-    <table class="module" role="module" data-type="text" border="0" cellpadding="0" cellspacing="0" width="100%" style="table-layout: fixed;">
-      <tr>
-        <td style="padding:18px 0px 18px 0px;line-height:22px;text-align:inherit;"
-            height="100%"
-            valign="top"
-            bgcolor="">
             <div>
-<div style="font-size: 14px;">Your SES domain received an email. We categorized this email as: {content_type}, but to confirm, you can follow the link below to view the message file in S3.</div>
+<div style="font-size: 14px;">
+<h3 style="font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-family: arial; color: rgb(0, 0, 0);">New email received to SES domain</h3>
+</div>
+
+<div style="font-size: 14px;">&nbsp;</div>
+
+<div style="font-size: 14px;">Your SES domain&nbsp;received an email. We categorized this email as:&nbsp;{content_type}, but to confirm, you can follow the link below to view the message file in S3.</div>
 
 <div style="font-size: 14px;">&nbsp;</div>
 
 <div style="font-size: 14px;">
-<div style="font-size: 14px;">Sender and/or message {notification_message}</div>
+<div style="font-size: 14px;">Sender and/or message:&nbsp;{notification_message}</div>
 
 <div style="font-size: 14px;">&nbsp;</div>
 
-<div style="font-size: 14px;"><span style="color: rgb(0, 0, 0); font-family: arial; font-size: 14px; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400;">Link to message file: {link_to_file}</span></div>
+<div style="font-size: 14px;"><span style="font-family: arial; font-size: 14px; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400;">Link to message file: {</span>link_to_file<span style="font-family: arial; font-size: 14px; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400;">}&nbsp;</span></div>
 </div>
 </div>
 
