--- a/src/parse_email_and_notify/notification_email_template.html
+++ b/src/parse_email_and_notify/notification_email_template.html
@@ -153,7 +153,7 @@
 
 <div style="font-size: 14px;">&nbsp;</div>
 
-<div style="font-size: 14px;"><span style="font-family: arial; font-size: 14px; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400;">Link to message file: {</span>link_to_file<span style="font-family: arial; font-size: 14px; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400;">}&nbsp;</span></div>
+<div style="font-size: 14px;"><span style="font-family: arial; font-size: 14px; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400;">Link to message file: {link_to_file}</span></div>
 </div>
 </div>
 
