--- a/src/parse_email_and_notify/notification_email_template.html
+++ b/src/parse_email_and_notify/notification_email_template.html
@@ -144,7 +144,7 @@
 
 <div style="font-size: 14px;">&nbsp;</div>
 
-<div style="font-size: 14px;">Your SES domain&nbsp;received an email. We categorized this email as:&nbsp;{content_type}, but to confirm, you can follow the link below to view the message file in S3.</div>
+<div style="font-size: 14px;">Your SES domain&nbsp;received an email. We categorized this email as:&nbsp;{content_type}, but to confirm, you can follow the link below to view the message object in S3.</div>
 
 <div style="font-size: 14px;">&nbsp;</div>
 
@@ -153,7 +153,7 @@
 
 <div style="font-size: 14px;">&nbsp;</div>
 
-<div style="font-size: 14px;"><span style="font-family: arial; font-size: 14px; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400;">Link to message file: {link_to_file}</span></div>
+<div style="font-size: 14px;"><span style="font-family: arial; font-size: 14px; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400;">{link_to_file}</span></div>
 </div>
 </div>
 
