notification message update

--- a/src/parse_email_and_notify/notification_email_template.html
+++ b/src/parse_email_and_notify/notification_email_template.html
@@ -149,7 +149,7 @@
 <div style="font-size: 14px;">&nbsp;</div>
 
 <div style="font-size: 14px;">
-<div style="font-size: 14px;">Sender and/or message:&nbsp;{notification_message}</div>
+<div style="font-size: 14px;">{notification_message}</div>
 
 <div style="font-size: 14px;">&nbsp;</div>
 
